@@ -242,6 +242,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * New configuration variable $wgShowPageOnRedlink that can be set to show the page
   instead of an edit interface when visiting a red link. The value can be specified
   for specific usergroups and namespaces.
+* (bug 16310) Credits page now lists IP addresses rather than saying the number
+  of anonymous users that edited the page
 
 === Bug fixes in 1.16 ===
 
